chore: code refactoring using sonar